<resources>
    <string name="app_name">Crypton</string>
    <string name="HelloWorld">PortfolioView</string>
    <string name="coin_name">Coin Name</string>
    <string name="volume">Volume:</string>
    <string name="high_today">High:</string>
    <string name="low_today">Low:</string>
    <string name="yesterday">Avg Yesterday:</string>
    <string name="bid">Bid:</string>
    <string name="ask">Ask:</string>
    <string name="pfb_name">Bittrex</string>
    <string name="pfb_percentage_increase">+%?</string>
    <string name="pfb_base_currency_increase">+$?</string>

    <!-- currencyBalance grid item-->
    <string name="balance_coin_name">LTC</string>
    <string name="balance_price_bought">$30</string>
    <string name="balance_price_now">$50</string>
    <string name="balance_percentage_change">+66.6%</string>

    <string name="balance_coin_amount">50 LTCs</string>
    <string name="balance_total_spent">$1500</string>
    <string name="balance_total_now">$2500</string>
    <string name="balance_earnings">+$1000</string>
</resources>