<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

                <ImageView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/coin_logo"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center_vertical"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/coin_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/textColorBold"
                        tools:text="@string/balance_coin_name"/>

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/price_bought"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/textColorDetails"
                        tools:text="@string/balance_price_bought"/>

                    <TextView
                        android:id="@+id/price_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/textColorDetails"
                        tools:text="@string/balance_price_now"/>

                    <TextView
                        android:id="@+id/percentage_change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/textColorDetails"
                        tools:text="@string/balance_percentage_change"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/coin_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textSize="16sp"
                        android:textAllCaps="true"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/textColorBold"
                        tools:text="@string/balance_coin_amount"/>

                    <TextView
                        android:id="@+id/total_spent"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/textColorDetails"
                        tools:text="@string/balance_total_spent"/>

                    <TextView
                        android:id="@+id/total_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/textColorDetails"
                        tools:text="@string/balance_total_now"/>

                    <TextView
                        android:id="@+id/earnings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/textColorDetails"
                        tools:text="@string/balance_earnings"/>
                </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
